# ROS-Constraint-Learning

./: README.md
articulation_model/: CMakeLists.txt  package.xml
articulation_model/src/: model_learner_msg.cpp
articulation_model/src/models/: generic_model.cpp
articulation_msgs/: CMakeLists.txt  package.xml
articulation_structure/: CMakeLists.txt  package.xml
articulation_structure/nodes/: articulation_collector.py
articulation_structure/src/: graph_learner.cpp  graph_learner.h
articulation_tutorials/: CMakeLists.txt  package.xml
articulation_tutorials/cpp_model_fitting/: model_fitting.launch  model_fitting_demo.cpp  sub_and_model_fitting.cpp
articulation_tutorials/pose_generator/: demo_trajectory_cartesian.csv  pose_generator.py  pose_generator_geopose.py  prismatic_demo.csv  rotational_demo.csv  stationary_rotational_demo.csv
articulation_tutorials/webcam_demo/: test.launch  test2.launch
checkerboard_detector/src/: checkerboard_detector.cpp
gaussian_process/: CMakeLists.txt  package.xml
hogman_minimal/: CMakeLists.txt  package.xml
hogman_minimal/include/hogman_minimal/stuff/: array_allocator.h
hogman_minimal/src/stuff/: array_allocator.h
uvc_camera/launch/: camera_node_multiple.launch  camera_nodelet.launch
